@@ -17504,3 +17504,6 @@ failed: wireguard over wireguard
 ---------------------------------- 2025-08-31 21:15:13 25.8.31
 no failed: wireguard over wireguard
 qc pass: wireguard over wireguard
+---------------------------------- 2025-09-01 22:02:24 25.9.1
+no qc pass: wireguard over ipv6
+failed: wireguard over ipv6
